# spln-multimedia

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  README_PRECIOS.md  actualizar.bat  data.json  generate.py  index.html  pyproject.toml  railway.toml
src/precios/: categorizer.py  cli.py  downloader.py  etl.py  logging_setup.py  reporter.py  run.py
tests/: test_categorizer.py  test_downloader.py  test_etl.py  test_reporter.py
tests/fixtures/: build_fixture.py
