[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "precios-olavarria"
version = "0.1.0"
description = "Comparador de precios SEPA para sucursales de Olavarria (CP 7400)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "sqlalchemy>=2.0",
    "anthropic>=0.39",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "black>=24.0", "pre-commit>=3.7"]

[project.scripts]
precios = "precios.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
